# LatticeRepLib

./: .gitignore  AsymmetricS6.xls  CMakeLists.txt  CmdLMP3.cpp  IT_CenteringMatrices.ods  LatticeRepLib.sln  Makefile  OperationTracingOfDistanceCalculations.txt  PDB_CELLS.ods  README.md  Readme.doc  Source1.cpp  WebMakefile  lys1341.cells  lys1342_PLOTS.xls  rcsb_pdb_unit_cell_20200413195438.csv
LRL_Tools/LRL_Tools_cmakelists/: CMakeLists.txt
LatticeRepLib/: .gitignore  CMakeLists.txt  LatticeRepLib.sln
LatticeRepresentationLib/: Allman.cpp  Allman.h  B4.cpp  B4.h  BasisBase.h  BravaisHeirarchy.cpp  BravaisHeirarchy.h  C3.cpp  C3.h  C3Plot.cpp  C3Plot.h  C6.cpp  C6.h  CMakeLists.txt  CS6Dist.c  CS6Dist.cpp  CS6Dist.h  CellInputData.cpp  CellInputData.h  ColorTables.cpp  ColorTables.h  D13.cpp  D13.h  D7.cpp  D7.h  D7Dist.c  D7Dist.h  D7Dist_.hpp  D7Prj.cpp  D7_Boundary.cpp  D7_BoundaryList.cpp  D7_BoundaryList.h  D7_ClassifySubboundaries.cpp  D7_ClassifySubboundaries.h  D7_Subboundary.cpp  D7_Subboundary.h  D7_boundary.cpp  D7_boundary.h  DC.cpp  DC.h  (+177 more)
PointDistanceFollower/: (RV1)(1)_2018-06-16.16_45_32.0_0.txt  (RV1)(1)_2018-06-17.09_19_52.0_0.txt  (RV1)(1)_2018-06-17.09_30_56.0_0.txt  (RV1)(R1)_2018-06-16.17_02_24.0_0.txt  (RV1)(V1)_2018-06-16.16_52_12.0_0.txt  (RV1)(V1)_2018-06-17.09_28_40.0_0.txt  (RV1)(V1)_2018-06-17.09_51_36.0_0.txt  (RV1)(V1)_2018-06-18.17_37_26.0_0.txt  (RV1)(V1)_2018-06-18.17_39_08.0_0.txt  (RVV1)(1)_2018-06-16.16_48_47.0_0.txt  (VRV1)(1)_2018-06-16.16_54_34.0_0.txt  (VRV1)(1)_2018-06-19.03_40_39.0_0.txt  (VRV1)(1)_2018-06-19.04_14_27.0_0.txt  (VRV1)(1)_2018-06-24.14_08_40.0_0.txt  (VRV1)(1)_2018-06-24.14_10_46.0_0.txt  (VRV1)(1)_2018-06-24.14_12_38.0_0.txt  (VRV1)(1)_2018-06-24.14_14_00.0_0.txt  (VRV1)(1)_2018-06-24.14_20_15.0_0.txt  (VRV1)(1)_2018-06-24.14_22_39.0_0.txt  (VRV1)(1)_2018-06-25.17_20_52.0_0.txt  (VRV1)(1)_2018-06-27.08_54_43.0_0.txt  (VRV1)(1)_2018-06-27.10_05_20.0_0.txt  (VRV1)(1)_2018-06-27.10_11_15.0_0.txt  15_53.495_0_2018-06-05.09_49_19.0_0.txt  15_53.495_0_2018-06-05.09_50_12.0_0.txt  15_53.495_0_2018-06-05.09_55_06.0_0.txt  15_53.495_0_2018-06-05.09_59_43.0_0.txt  15_53.495_0_2018-06-05.10_00_50.0_0.txt  15_53.495_0_2018-06-05.10_01_36.0_0.txt  15_53.495_0_2018-06-05.10_19_17.0_0.txt  15_53.495_0_2018-06-05.11_01_59.0_0.txt  15_53.495_0_2018-06-05.11_03_45.0_0.txt  15_53.495_0_2018-06-05.12_25_37.0_0.txt  15_53.495_0_2018-06-05.12_42_59.0_0.txt  15_53.495_0_2018-06-05.13_26_10.0_0.txt  15_53.495_0_2018-06-05.13_36_48.0_0.txt  15_53.495_0_2018-06-05.15_35_25.0_0.txt  15_53.495_0_2018-06-05.15_36_25.0_0.txt  15_53.495_0_2018-06-05.15_37_46.0_0.txt  15_53.495_0_2018-06-05.15_56_46.0_0.txt  (+1444 more)
PointDistanceFollower/(RV1)(V1)/: LINE3_RAND%_.0_0.txt  LINE3_RAND%_.10_0.txt  LINE3_RAND%_.11_0.txt  LINE3_RAND%_.12_0.txt  (+92 more)
SVD/: CMakeLists.txt  MAIN_SVD.cpp  SVD.vcxproj  SVD.vcxproj.filters  svd.h  svd_backup.txt
SVG_Follow/: 0-0_2017-10-25.08_53_31.0_.txt  0-0_2017-10-25.08_54_16.0_.txt  1-1_2017-10-25.08_54_58.0_.txt  1-1_2017-10-25._DIST.txt  10PERCENT_2018-03-07.11_26_23.3_.txt  10PERCENT_2018-03-07.11_26_23.5_.txt  10PERCENT_2018-03-07.11_26_25.23_.txt  10PERCENT_2018-03-07.11_26_25.28_.txt  10PERCENT_2018-03-07.11_26_27.47_.txt  10PERCENT_2018-03-07.11_26_30.85_.txt  10PERCENT_2018-03-07.11_26_31.89_.txt  10PERCENT_2018-03-07.11_26_31.95_.txt  10PERCENT_2018-03-07.11_26_34.124_.txt  10PERCENT_2018-03-07.11_26_36.155_.txt  10PERCENT_2018-03-07.11_26_39.179_.txt  10PERCENT_2018-03-07.11_26_39.180_.txt  10PERCENT_2018-03-07.11_26_40.193_.txt  10PERCENT_2018-03-07.11_26_40.195_.txt  10PERCENT_2018-03-07.11_26_40.196_.txt  10PERCENT_2018-03-07.11_26_41.199_.txt  10PERCENT_2018-03-07.11_26_42.212_.txt  10PERCENT_2018-03-07.11_26_44.230_.txt  10PERCENT_2018-03-07.11_26_50.293_.txt  10PERCENT_2018-03-07.11_26_52.313_.txt  10PERCENT_2018-03-07.11_26_52.316_.txt  10PERCENT_2018-03-07.11_26_53.320_.txt  10PERCENT_2018-03-07.11_26_54.333_.txt  10PERCENT_2018-03-07.11_26_54.336_.txt  10PERCENT_2018-03-07.11_26_57.370_.txt  10PERCENT_2018-03-07.11_26_57.371_.txt  10PERCENT_2018-03-07.11_26_59.390_.txt  10PERCENT_2018-03-07.11_27_02.411_.txt  10PERCENT_2018-03-07.11_27_05.454_.txt  10PERCENT_2018-03-07.11_27_09.515_.txt  10PERCENT_2018-03-07.11_27_12.544_.txt  10PERCENT_2018-03-07.11_27_15.581_.txt  10PERCENT_2018-03-07.11_27_17.598_.txt  10PERCENT_2018-03-07.11_27_18.618_.txt  10PERCENT_2018-03-07.11_27_20.632_.txt  10PERCENT_2018-03-07.11_27_20.633_.txt  (+908 more)
SVG_TriangleFollow/: CMakeLists.txt  DetermineOutliers.h  FileOperations.h  Follow.h  Follower.h  FollowerTools.cpp  FollowerTools.h  Glitch.h  GlitchElement.h  GlobalTriangleFollowerConstants.cpp  GlobalTriangleFollowerConstants.h  LabeledVectorBoundaries.h  LinearAxis.cpp  MapBoundaryStrings2Colors.cpp  MapBoundaryStrings2Colors.h  NCDist.h  OutlierFinder.cpp  PairReporter.h  ProcessTriangle.h  ProgressData.cpp  ProgressData.h  ReadGlobalData.cpp  Rn_Path.h  SVG_FollowTriangle.h  SVG_Tools.cpp  SVG_Tools.h  SVG_TriangleFollow.vcxproj  SVG_TriangleFollow.vcxproj.filters  TriangleFollow.h  TriangleFollowTools.h  haar.cpp  haar.hpp  main_SVG_TriangleFollower.cpp
Transformer/: B4Matcher.cpp  B4Matcher.h  BasicProgramInput.h  BidirectionalMatrixMatcher.cpp  BidirectionalMatrixMatcher.h  BidirectionalTest.cpp  CMakeLists.txt  CellTransformer3D.h  CellTransformer3DExample.cpp  CellTransformer3Dr.cpp  CenteringExperiment.cpp  CenteringExperiment.h  CenteringTest.h  ComparisonStats.h  LatticeMatcher.h  LatticeMatcherTest.cpp  LatticeTransformer.cpp  LatticeTransformer.h  MAIN_ARCHIVED.cpp  MatrixSets_B4Matcher.h  MatrixVerifier.h  Matrix_3x3.h  MultiTransformFinder.h  MultiTransformFinderControls.h  MultiTransformFinderTest.cpp  NiggliMatrices.h  ProductionLatticeMatcher.cpp  ProductionLatticeMatcher.h  SingularityFixes.h  TransformResult.h  TransformUtilities.cpp  TransformationMatrices.h  TransformationModule.cpp  TransformationModule.h  TransformationReservoir.h  Transformer.vcxproj  Transformer.vcxproj.filters  TransformerDisplay.cpp  TransformerDisplay.h  TransformerUtilities.cpp  (+15 more)
(+2051 files in other folders)
